--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,21 @@
     <dimen name="TeamNames">17sp</dimen>
     <dimen name="Score">30sp</dimen>
     <dimen name="League">15sp</dimen>
+
+    <!-- Football Widget -->
+    <dimen name="widget_football_default_width">110dp</dimen>
+    <dimen name="widget_football_default_height">110dp</dimen>
+    <dimen name="widget_football_min_resize_width">40dp</dimen>
+    <dimen name="widget_football_min_resize_height">@dimen/widget_football_min_resize_width</dimen>
+    <dimen name="widget_football_large_width">220dp</dimen>
+
+
+    <!-- Text Sizes - We are using DP here rather than SP because these are already large
+         font sizes, and going larger will cause lots of view problems.  This is only for
+         the large forecast numbers in the forecast list -->
+    <dimen name="forecast_widget_text_size">20dp</dimen>
+
+    <!-- This is an odd width, but we're trying to match the font closely to keep things working
+         on devices that don't yet have Roboto -->
+    <dimen name="forecast_widget_text_width">30dp</dimen>
 </resources>
