--- a/app/src/main/res/layout-v17/detail_fragment.xml
+++ b/app/src/main/res/layout-v17/detail_fragment.xml
@@ -37,6 +37,7 @@
             android:text="@string/share_text"
             android:id="@+id/share_button"
             android:drawableLeft="@android:drawable/ic_menu_share"
+            android:drawableStart="@android:drawable/ic_menu_share"
             android:contentDescription="@string/share_text"
             android:paddingStart="120dp"
             android:paddingEnd="120dp"/>
